--- a/content/lectures/01-introbayestheory.html
+++ b/content/lectures/01-introbayestheory.html
@@ -2,7 +2,7 @@
 title: "Introduction"
 linktitle: "Introduction"
 date: "2020-11-30"
-read_date: "2020-11-30"
+class_date: "2020-11-30"
 menu:
   lectures:
     parent: "I Introduction à l'analyse bayésienne"
@@ -19,31 +19,31 @@ output:
 
 <div id="TOC">
 <ul>
-<li><a href="#video-lecture">Video lecture</a><ul>
-<li><a href="#introduction-part-1">Introduction part 1</a></li>
-<li><a href="#introduction-part-2">Introduction part 2</a></li>
+<li><a href="#leçons-video">Leçons video</a><ul>
+<li><a href="#introduction-partie-1">Introduction : partie 1</a></li>
+<li><a href="#introduction-partie-2">Introduction : partie 2</a></li>
 </ul></li>
-<li><a href="#slides">Slides</a></li>
+<li><a href="#diaporamas">Diaporamas</a></li>
 </ul>
 </div>
 
-<div id="video-lecture" class="section level2">
-<h2>Video lecture</h2>
-<div id="introduction-part-1" class="section level3">
-<h3>Introduction part 1</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/rn4EPzQmj44" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="leçons-video" class="section level2">
+<h2>Leçons video</h2>
+<div id="introduction-partie-1" class="section level3">
+<h3>Introduction : partie 1</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IyKzucnCxrI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 <p>👉 <a href="http://students.brown.edu/seeing-theory/bayesian-inference/index.html#section1"><em>Seeing Theory</em>, Brown University</a></p>
 </div>
-<div id="introduction-part-2" class="section level3">
-<h3>Introduction part 2</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/LRyY37-mB2g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="introduction-partie-2" class="section level3">
+<h3>Introduction : partie 2</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NHEoUftcfec" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
 </div>
-<div id="slides" class="section level2">
-<h2>Slides</h2>
-<p>The <strong>slides</strong> for the first part of this section are displayed below, and can be downloaded <a href="/slides/slidesIntro1.pdf">here</a>.</p>
+<div id="diaporamas" class="section level2">
+<h2>Diaporamas</h2>
+<p>Le <strong>diaporama</strong> pour la première partie de cette section sont affichées ci-dessous, et peut être téléchargé <a href="/slides/slidesIntro1.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesIntro1.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -51,7 +51,7 @@ output:
 </object>
 </body>
 </html>
-<p>The <strong>slides</strong> for the second part of this section are displayed below, and can be downloaded <a href="/slides/slidesIntro2.pdf">here</a>.</p>
+<p>Le <strong>diaporama</strong> pour la seconde partie de cette section sont affichées ci-dessous, et peut être téléchargé <a href="/slides/slidesIntro2.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesIntro2.pdf##view=fit" type="application/pdf" width="420" height="237">
