--- a/content/lectures/02-bayesmodel.html
+++ b/content/lectures/02-bayesmodel.html
@@ -20,7 +20,7 @@ output:
 
 <div id="TOC">
 <ul>
-<li><a href="#leçon-vidéo">Leçon vidéo</a><ul>
+<li><a href="#leçons-vidéo">Leçons vidéo</a><ul>
 <li><a href="#modélisation-bayésienne-partie-1">Modélisation bayésienne partie 1</a></li>
 <li><a href="#modélisation-bayésienne-partie-2">Modélisation bayésienne partie 2</a></li>
 <li><a href="#modélisation-bayésienne-partie-3">Modélisation bayésienne partie 3</a></li>
@@ -31,11 +31,11 @@ output:
 </ul>
 </div>
 
-<div id="leçon-vidéo" class="section level2">
-<h2>Leçon vidéo</h2>
+<div id="leçons-vidéo" class="section level2">
+<h2>Leçons vidéo</h2>
 <div id="modélisation-bayésienne-partie-1" class="section level3">
 <h3>Modélisation bayésienne partie 1</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/8Ez-wWMohDg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Hy7hNrBo_Go" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
 <div id="modélisation-bayésienne-partie-2" class="section level3">
@@ -63,7 +63,7 @@ output:
 </div>
 <div id="diaporamas" class="section level2">
 <h2>Diaporamas</h2>
-<p>Le <strong>diaporama</strong> pour la première partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesModel1.pdf">ici</a>.</p>
+<p>Le <strong>diaporama</strong> pour la première partie de cette section sont affichées ci-dessous, et peut être téléchargées <a href="/slides/slidesModel1.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesModel1.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -71,7 +71,7 @@ output:
 </object>
 </body>
 </html>
-<p>Le <strong>diaporama</strong> pour la deuxième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées [ici]](/slides/slidesModel2.pdf).</p>
+<p>Le <strong>diaporama</strong> pour la deuxième partie de cette section sont affichées ci-dessous, et peut être téléchargées <a href="/slides/slidesModel2.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesModel2.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -79,7 +79,7 @@ output:
 </object>
 </body>
 </html>
-<p>Le <strong>diaporama</strong> pour la troisième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesModel3.pdf">ici</a>.</p>
+<p>Le <strong>diaporama</strong> pour la troisième partie de cette section sont affichées ci-dessous, et peut être téléchargées <a href="/slides/slidesModel3.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesModel3.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -87,7 +87,15 @@ output:
 </object>
 </body>
 </html>
-<p>Le <strong>diaporama</strong> pour la quatrième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesPriors.pdf">ici</a>.</p>
+<p>Le <strong>diaporama</strong> pour la quatrième partie de cette section sont affichées ci-dessous, et peut être téléchargées <a href="/slides/slidesModel4.pdf">ici</a>.</p>
+<html>
+<body>
+<object data="/slides/slidesModel4.pdf##view=fit" type="application/pdf" width="420" height="237">
+<embed src="/slides/slidesModel4.pdf##view=fit" type="application/pdf"/>
+</object>
+</body>
+</html>
+<p>Le <strong>diaporama</strong> pour la cinquième partie de cette section sont affichées ci-dessous, et peut être téléchargées <a href="/slides/slidesPriors.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesPriors.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -95,7 +103,7 @@ output:
 </object>
 </body>
 </html>
-<p>Le <strong>diaporama</strong> pour la cinquième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesGoingFurther.pdf">ici</a>.</p>
+<p>Le <strong>diaporama</strong> pour la sixième partie de cette section sont affichées ci-dessous, et peut être téléchargées <a href="/slides/slidesGoingFurther.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesGoingFurther.pdf##view=fit" type="application/pdf" width="420" height="237">
