--- a/content/lectures/03-bayesinference.html
+++ b/content/lectures/03-bayesinference.html
@@ -24,7 +24,7 @@ output:
 <li><a href="#inférence-bayésienne-partie-2-map">Inférence Bayésienne partie 2: MAP</a></li>
 <li><a href="#inférence-bayésienne-partie-3-espérance">Inférence Bayésienne partie 3: espérance</a></li>
 <li><a href="#inférence-bayésienne-partie-4-incertitude">Inférence Bayésienne partie 4: incertitude</a></li>
-<li><a href="#inférence-bayésienne-asymptotique">Inférence Bayésienne — asymptotique</a></li>
+<li><a href="#inférence-bayésienne-partie-5-asymptotique">Inférence Bayésienne partie 5: asymptotique</a></li>
 </ul></li>
 <li><a href="#diaporamas">Diaporamas</a></li>
 </ul>
@@ -52,8 +52,8 @@ output:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/4E7p5T4rLKM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="inférence-bayésienne-asymptotique" class="section level3">
-<h3>Inférence Bayésienne — asymptotique</h3>
+<div id="inférence-bayésienne-partie-5-asymptotique" class="section level3">
+<h3>Inférence Bayésienne partie 5: asymptotique</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RdhyuOl17OM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 <p>👉 <a href="http://students.brown.edu/seeing-theory/bayesian-inference/index.html#section3"><em>Seeing Theory</em>, Brown University</a></p>
@@ -69,7 +69,23 @@ output:
 </object>
 </body>
 </html>
-<p>Le <strong>diaporama</strong> pour la deuxième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesUncertainty.pdf">ici</a>.</p>
+<p>Le <strong>diaporama</strong> pour la deuxième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesMAP.pdf">ici</a>.</p>
+<html>
+<body>
+<object data="/slides/slidesMAP.pdf##view=fit" type="application/pdf" width="420" height="237">
+<embed src="/slides/slidesMAP.pdf##view=fit" type="application/pdf"/>
+</object>
+</body>
+</html>
+<p>Le <strong>diaporama</strong> pour la troisième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesEAP">ici</a>.</p>
+<html>
+<body>
+<object data="/slides/slidesEAP##view=fit" type="application/pdf" width="420" height="237">
+<embed src="/slides/slidesEAP.pdf##view=fit" type="application/pdf"/>
+</object>
+</body>
+</html>
+<p>Le <strong>diaporama</strong> pour la quatrième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesUncertainty.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesUncertainty.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -77,7 +93,7 @@ output:
 </object>
 </body>
 </html>
-<p>Le <strong>diaporama</strong> pour la troisième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesAsymptotics.pdf">ici</a>.</p>
+<p>Le <strong>diaporama</strong> pour la cinquième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesAsymptotics.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesAsymptotics.pdf##view=fit" type="application/pdf" width="420" height="237">
