--- a/content/projet/index.html
+++ b/content/projet/index.html
@@ -24,7 +24,7 @@ output:
 <ul>
 <li><strong>Composition des groupes</strong>
 <ol style="list-style-type: decimal">
-<li>Blandine Gendre, Klervi Le Gall, Minh Huyen Ton Nu Nguyet &amp; Herman Nzaba Loundou</li>
+<li>Blandine Gendre, Klervi Le Gall, Minh Huyen &amp; Herman Nzaba Loundou</li>
 <li>Alexis François, Samantha Labarbe, Aurelien Lascouts &amp; Mélanie Huchon</li>
 <li>Ariane Bercu, Olivier Quintin &amp; Grace Zinsou</li>
 <li>Antoine Gouelibo, Lyvia Magloire &amp; Noelia Retuerto</li>
